# dz_django

./: pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_is_published_alter_post_views_count.py  0003_alter_post_created_at.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: data.json  fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_image_and_more.py  0003_version.py  0004_alter_version_product.py
catalog/templates/: contacts.html  home.html  products.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products.html
catalog/templates/includes/: nav_bar.html
catalog/templatetags/: tags.py
config/: settings.py  urls.py
